@@ -44,6 +44,7 @@ Release 0.98
  * Altered TIFF tag searching to do an exact directory match when possible.
  * SANSELAN-48 - added support for reading and writing CCITT Modified Huffman, Group 3 and Group 4 images.
  * SANSELAN-31 - added a high level type-safe API for reading and writing EXIF fields.
+ * SANSELAN-25 - added support for the RGBE (Radiance HDR) image format.
 
 Release 0.97
 ------------
